src/test/deca/syntax/valid/provided/decl_class_extends.deca
// Description:
//    Déclaration de classe héritant d'une autre
//
// Resultats:
//    Rien
//
// Historique:
//    cree le 01/01/2021

 class A extends B {
	
}
	
